@@ -43,6 +43,7 @@ class CBlockCacheForPath
 private:
 
     WCHAR path[MAX_PATH];
+    bool m_bBlocked;
 
 public:
 
