@@ -4,6 +4,8 @@ Version 1.9.6
        ignore patterns. (Stefan)
 - BUG: TortoiseMerge jumped to the wrong line on startup
        if the view was collapsed. (Stefan)
+- CHG: Minor performance improvement for all operations when status cache is
+       disabled. (Ivan Zhakov)
 
 Version 1.9.5
 - BUG: The "go to next diff" in TortoiseMerge stopped at
